<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/snackbarPosition"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.65"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:id="@+id/dashboard_relative_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                  <!--  <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_settings"
                        android:layout_margin="16dp"/> -->



                    <ProgressBar
                        android:id="@+id/dashboard_progress_bar_level"
                        android:layout_width="100dp"
                        android:layout_height="24dp"
                        android:layout_centerInParent="true"
                        android:progress="20"
                        style="@style/CustomProgressBarHorizontal"/>

                    <com.appsforworld.triviacountry.overwrite.SecondaryLightTextView
                        android:id="@+id/dashboard_points_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_below="@+id/dashboard_progress_bar_level"
                        android:textSize="9sp"
                        android:layout_centerHorizontal="true"
                        android:paddingTop="16dp"
                        android:text="Puntos: 90/180"/>

                    <com.appsforworld.triviacountry.overwrite.SecondaryMediumTextView
                        android:id="@+id/dashboard_level_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:layout_centerInParent="true"
                        android:text="Level: 7"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/dashboard_relative_toolbar"
                    android:paddingTop="16dp">

                    <RelativeLayout
                        android:id="@+id/relative_total_stats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="12dp">

                        <com.mikhaellopez.circularprogressbar.CircularProgressBar
                            android:id="@+id/total_progress_circular"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_centerHorizontal="true"
                            app:cpb_background_progressbar_color="@color/translucentBlack"
                            app:cpb_progressbar_color="@color/colorTotalStats"
                            app:cpb_progressbar_width="6dp"
                            app:cpb_background_progressbar_width="6dp"/>

                        <com.appsforworld.triviacountry.overwrite.PrimaryTextView
                            android:id="@+id/total_progress_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="32dp"
                            android:textColor="@android:color/white"
                            android:textSize="25sp"
                            android:text="0%"/>

                        <com.appsforworld.triviacountry.overwrite.SecondaryRegularTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/total_progress_circular"
                            android:layout_marginTop="6dp"
                            android:layout_centerHorizontal="true"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:text="@string/answered_text"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:paddingTop="16dp">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true">

                                <RelativeLayout
                                    android:id="@+id/relative_correct_stats"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true">

                                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                                        android:id="@+id/correct_progress_circular"
                                        android:layout_width="80dp"
                                        android:layout_height="80dp"
                                        app:cpb_progressbar_width="4dp"
                                        app:cpb_background_progressbar_width="4dp"
                                        app:cpb_background_progressbar_color="@color/translucentOne"
                                        app:cpb_progressbar_color="@color/colorCorrectStats"/>

                                    <com.appsforworld.triviacountry.overwrite.PrimaryTextView
                                        android:id="@+id/correct_progress_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true"
                                        android:textColor="@android:color/white"
                                        android:textSize="22sp"
                                        android:text="0%"/>

                                </RelativeLayout>

                                <com.appsforworld.triviacountry.overwrite.SecondaryRegularTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/relative_correct_stats"
                                    android:layout_marginTop="6dp"
                                    android:layout_centerHorizontal="true"
                                    android:textAllCaps="true"
                                    android:textSize="12sp"
                                    android:textColor="@color/white"
                                    android:text="@string/correct_text"/>

                            </RelativeLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true">

                                <RelativeLayout
                                    android:id="@+id/relative_incorrect_stats"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true">

                                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                                        android:id="@+id/incorrect_progress_circular"
                                        android:layout_width="80dp"
                                        android:layout_height="80dp"
                                        app:cpb_progressbar_width="4dp"
                                        app:cpb_background_progressbar_width="4dp"
                                        app:cpb_background_progressbar_color="@color/translucentOne"
                                        app:cpb_progressbar_color="@color/colorIncorrectStats"/>

                                    <com.appsforworld.triviacountry.overwrite.PrimaryTextView
                                        android:id="@+id/incorrect_progress_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true"
                                        android:textColor="@android:color/white"
                                        android:textSize="22sp"
                                        android:text="0%"/>

                                </RelativeLayout>

                                <com.appsforworld.triviacountry.overwrite.SecondaryRegularTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/relative_incorrect_stats"
                                    android:layout_marginTop="6dp"
                                    android:layout_centerHorizontal="true"
                                    android:textAllCaps="true"
                                    android:textSize="12sp"
                                    android:textColor="@color/white"
                                    android:text="@string/incorrect_text"/>

                            </RelativeLayout>

                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/relative_bottom"
                android:layout_width="match_parent"
                android:background="@color/colorBackgroundDark"
                android:layout_height="0dp"
                android:layout_weight="0.35"
                android:paddingTop="32dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/button_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:contentPaddingTop="6dp"
                    app:contentPaddingBottom="6dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/colorTotalStats"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:onClick="play">

                    <com.appsforworld.triviacountry.overwrite.PrimaryTextView
                        android:id="@+id/text_button_continue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:textSize="20sp"
                        android:textAllCaps="true"
                        android:text="@string/button_play_text"/>

                </android.support.v7.widget.CardView>

                <!--<android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    app:cardCornerRadius="55dp"
                    app:cardElevation="7dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_play_blue"
                        android:padding="8dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:onClick="play"/>

                </android.support.v7.widget.CardView> -->

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    ads:adSize="SMART_BANNER"
                    app:adUnitId="@string/dashboard_banner_ad_unit_id">
                </com.google.android.gms.ads.AdView>

            </RelativeLayout>


        </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
